--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -3,7 +3,7 @@ INCLUDES = .
 CXXFLAGS = -Wall -Wextra -Werror -MMD
 CXXFLAGS += -std=c++98 -I$(INCLUDES)
 
-NAME = horde
+NAME = zombieHorde
 SRCS = main.cpp Zombie.cpp zombieHorde.cpp
 OBJS = $(SRCS:.cpp=.o)
 DEPS = $(SRCS:.cpp=.d)
