--- a/cpp06/ex01/Makefile
+++ b/cpp06/ex01/Makefile
@@ -4,7 +4,7 @@ CXXFLAGS = -Wall -Wextra -Werror -MMD
 CXXFLAGS += -std=c++98
 
 NAME = template
-SRCS = main.cpp Template.cpp
+SRCS = main.cpp Serializer.cpp
 OBJS = $(SRCS:.cpp=.o)
 DEPS = $(SRCS:.cpp=.d)
 
