--- a/cpp09/.vscode/settings.json
+++ b/cpp09/.vscode/settings.json
@@ -48,6 +48,7 @@
         "unordered_map": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "algorithm": "cpp"
     }
 }
