--- a/cpp09/.vscode/settings.json
+++ b/cpp09/.vscode/settings.json
@@ -49,6 +49,7 @@
         "variant": "cpp",
         "vector": "cpp",
         "complex": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "ostream": "cpp"
     }
 }
