--- a/cpp09/ex02/.vscode/settings.json
+++ b/cpp09/ex02/.vscode/settings.json
@@ -62,6 +62,7 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "utility": "cpp",
-        "numbers": "cpp"
+        "numbers": "cpp",
+        "iomanip": "cpp"
     }
 }
