--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -3,7 +3,7 @@ INCLUDES = .
 CXXFLAGS = -Wall -Wextra -Werror -MMD
 CXXFLAGS += -std=c++98
 
-NAME = template
+NAME = convert
 SRCS = main.cpp ScalarConverter.cpp
 OBJS = $(SRCS:.cpp=.o)
 DEPS = $(SRCS:.cpp=.d)
